--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -50,6 +50,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	color: $theme-text-color-primary;
 	font-weight: bold;
+	justify-content: left;
 }
 
 a.theme-link {
@@ -144,14 +145,21 @@ a.resume-link {
 .resume-main {
 	.item-title {
 		font-size: 1rem;
+		justify-content: left;
 	}
 
    .item-meta {
 	   font-size: 0.75rem;
    }
    .item-content {
-		font-size: 0.875rem;
+	   font-size: 0.875rem;
+	   justify-content: left;
 	}
+	.item-content-information{
+		font-size: 0.875rem;
+		text-align: center;
+	}
+
 }
 
 .resume-aside {
@@ -162,6 +170,7 @@ a.resume-link {
 	.item-title {
 		font-size: 1rem;
 	}
+	justify-content: left;
 
 }
 
