--- a/layouts/partials/experience.html
+++ b/layouts/partials/experience.html
@@ -1,5 +1,5 @@
 
-                            <section class="work-section py-3">
+                            <section class="work-section py-1">
 
                                 <h3 class="text-uppercase resume-section-heading mb-4">{{ i18n "experiences" }}</h3>
 
@@ -10,7 +10,7 @@
                                         <div class="item-meta col-12 col-md-6 col-lg-6 text-muted text-left text-md-right">{{ .company }} | {{ .dates }}</div>
                                     </div>
                                     <div class="item-content">
-                                        <p>{{ with .details }}{{ . | markdownify }}{{ end }}</p>
+                                        <strong>{{ with .details }}{{ . | markdownify }}{{ end }}</strong>
                                         <ul class="resume-list">
                                             {{ range .items }}
                                             <li>{{ with .details }}{{ . | markdownify }}{{ end }}</li>
