--- a/layouts/partials/information.html
+++ b/layouts/partials/information.html
@@ -1,13 +1,13 @@
 
-                            <section class="project-section py-3">
+                            <section class="project-section py-1">
 
                                 <h3 class="text-uppercase resume-section-heading mb-4">{{ i18n "information" }}</h3>
 
                                 {{ range .Site.Params.information.list }}
                                 <div class="item mb-3">
-                                    <div class="item-heading row align-items-center mb-2">
+                                    <!--<div class="item-heading row align-items-center mb-2">
                                         <h4 class="item-title col-12 col-md-12 col-lg-12 mb-2 mb-md-0">{{ .title }}</h4>
-                                    </div>
+                                    </div>-->
                                     <div class="item-content">
                                         <p>{{ with .details }}{{ . | markdownify }}{{ end }}</p>
                                         <ul class="list-unstyled resume-skills-list">
