--- a/layouts/partials/skills.html
+++ b/layouts/partials/skills.html
@@ -1,5 +1,5 @@
 
-                            <section class="skills-section py-3">
+                            <section class="skills-section py-1">
 
                                 <h3 class="text-uppercase resume-section-heading mb-4">{{ i18n "skills" }}</h3>
 
@@ -8,7 +8,7 @@
                                     <h4 class="item-title">{{ .title }}</h4>
                                     <ul class="list-unstyled resume-skills-list">
                                         {{ range .items }}
-                                        <li class="mb-2">{{ with .details }}{{ . | markdownify }}{{ end }}</li>
+                                        <li class="mb-2">{{ with .details }}{{ . | markdownify }}{{ end }}
                                         {{ end }}
                                     </ul>
                                 </div><!--//item-->
