--- a/layouts/partials/status.html
+++ b/layouts/partials/status.html
@@ -1,10 +1,10 @@
 
                             <section class="skills-section py-1">
 
-                                <h3 class="text-uppercase resume-section-heading mb-4">{{ i18n "interests" }}</h3>
+                                <h3 class="text-uppercase resume-section-heading mb-4">{{ i18n "status" }}</h3>
 
                                 <ul class="list-unstyled resume-interests-list mb-0">
-                                    {{ range .Site.Params.interests.list }}
+                                    {{ range .Site.Params.status.list }}
                                     <li class="mb-2">{{ .name }}</li>
                                     {{ end }}
                                 </ul>
