--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -6,11 +6,17 @@
                                 {{ range .Site.Params.projects.list }}
                                 <div class="item mb-3">
                                     <div class="item-heading row align-items-center mb-2">
-                                        <h4 class="item-title col-12 col-md-12 col-lg-12 mb-2 mb-md-0">{{ .title }}</h4>
-                                        <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">{{ .meta }}</div>
+                                        <h4 class="item-title col-12 col-md-6 col-lg-6 mb-2 mb-md-0">{{ .title }}</h4>
+                                        <div class="item-meta col-12 col-md-6 col-lg-6 text-muted text-left text-md-right">{{ .company }} | {{ .dates }}</div>
                                     </div>
                                     <div class="item-content">
-                                        <p>{{ .tagline }}</p>
+                                        <strong>{{ with .details }}{{ . | markdownify }}{{ end }}</strong>
+                                        <p><i>{{ with .context }}{{ . | markdownify }}{{ end }}</i></p>
+                                        <ul class="resume-list">
+                                            {{ range .items }}
+                                            <li>{{ with .details }}{{ . | markdownify }}{{ end }}</li>
+                                            {{ end }}
+                                        </ul>
                                     </div>
                                 </div><!--//item-->
                                 {{ end }}
