--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -5,7 +5,7 @@
 
                         <img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="{{ .Site.BaseURL }}assets/images/{{ .Site.Params.profile.avatar }}" alt="image">
 
-                        <div class="media-body text-left">
+                        <div class="media-body text-left" style="font-size: 18px">
                             <p class="mb-0">{{ .Site.Params.summary.text }}</p>
                             <p class="mb-0">{{ .Site.Params.summary.textSecond }}</p>
 
